--- a/index.html
+++ b/index.html
@@ -68,14 +68,7 @@
         document.querySelector('#scan-button').addEventListener('click', function() {
             Instascan.Camera.getCameras().then(function (cameras) {
                 if (cameras.length > 0) {
-                    var selectedCam = cameras[0];
-                    // If there are multiple cameras, select the rear one
-                    for(var i = 0; i < cameras.length; i++) {
-                        if(cameras[i].name.indexOf('back') !== -1) {
-                            selectedCam = cameras[i];
-                            break;
-                        }
-                    }
+                    var selectedCam = cameras[cameras.length - 1]; // Select the last camera
                     scanner.start(selectedCam);
                 } else {
                     console.error('No cameras found.');
