--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
             transition: opacity 0.2s ease;
         }
     </style>
-    <script type="text/javascript" src="https://cdn.rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/html5-qrcode"></script>
 </head>
 <body>
     <h1>Scan QR Code</h1>
-    <video id="preview"></video>
+    <div id="reader"></div>
     <button class="game-button" id="scan-button">Scan QR Code</button>
     <button class="game-button" id="stop-button">Stop Scanner</button>
     <button class="game-button" id="toggle-button">Toggle Camera</button>
@@ -79,63 +79,31 @@
             beep.playbackRate = .80; // Speed up the beep sound by 2x
         }
 
-        let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
-        let scannedCodes = [];
         let lastScannedTime = Date.now();
-        scanner.addListener('scan', function (content) {            
-            if (Date.now() - lastScannedTime > 100) { 
-                scannedCodes.push(content);
-                document.querySelector('#info-window').innerHTML = 'Scanned QR Codes: <br>' + scannedCodes.join('<br>');
-                lastScannedTime = Date.now();
-                beep.play();
-
-                // Flash the screen on successful scan
-                let flash = document.querySelector('#flash');
-                flash.style.opacity = 1;
-                setTimeout(function() {
-                    flash.style.opacity = 0;
-                }, 100);
-            }
-        });
-
         let currentCameraIndex = 0;
         let cameras = [];
 
-document.querySelector('#scan-button').addEventListener('click', function() {
-    Instascan.Camera.getCameras().then(function (availableCameras) {
-        if (availableCameras.length > 0) {
-            cameras = availableCameras;
-            // Start with the first camera in the list
-            currentCameraIndex = 0;
-            scanner.mirror = currentCameraIndex === 0; // mirror the front camera
-            scanner.start(cameras[currentCameraIndex]).then(function() {
-                // Make the target visible when the camera is on
-                document.querySelector('#target').style.display = 'block';
-            });
-        } else {
-            console.error('No cameras found.');
+        const onScanSuccess = (decodedText, decodedResult) => {
+            if (Date.now() - lastScannedTime > 100) { 
+                document.querySelector('#info-window').innerHTML = 'Scanned QR Code: <br>' + decodedText;
+                lastScannedTime = Date.now();
+                beep.play();
+            }
         }
-    }).catch(function (e) {
-        console.error(e);
-    });
-});
 
+        const html5QrcodeScanner = new Html5QrcodeScanner(
+            "reader", { fps: 10, qrbox: 200 });
+
+        document.querySelector('#scan-button').addEventListener('click', function() {
+            html5QrcodeScanner.render(onScanSuccess);
+        });
 
         document.querySelector('#stop-button').addEventListener('click', function() {
-            scanner.stop();
+            html5QrcodeScanner.clear();
         });
 
         document.querySelector('#toggle-button').addEventListener('click', function() {
-            if (cameras.length > 1) {
-                scanner.stop().then(() => {
-                    currentCameraIndex = ++currentCameraIndex % cameras.length; // toggle camera
-                    scanner.mirror = currentCameraIndex === 0; // mirror the front camera
-                    scanner.start(cameras[currentCameraIndex]).then(function() {
-                        // Make the target visible when the camera is on
-                        document.querySelector('#target').style.display = 'block';
-                    });
-                });
-            }
+            // Toggle camera functionality is not directly supported by the html5-qrcode library
         });
     </script>
 </body>
