--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
             opacity: 0;
             transition: opacity 0.2s ease;
         }
+        .game-button {
+    font-size: 30px; /* Increase the font size */
+    padding: 20px 40px; /* Increase the padding */
+    /* Other styles... */
+}
+
+.info-window {
+    font-size: 25px; /* Increase the font size */
+    /* Other styles... */
+}
+
     </style>
     <script type="text/javascript" src="https://unpkg.com/html5-qrcode"></script>
 </head>
