--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
     font-size: 25px; /* Increase the font size */
     /* Other styles... */
 }
+#reader__dashboard_section {
+    font-size: 20px; /* Increase the font size */
+    color: #000; /* Change the text color to black */
+    background-color: #fff; /* Change the background color to white */
+}
 
     </style>
     <script type="text/javascript" src="https://unpkg.com/html5-qrcode"></script>
