--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@
     color: #000; /* Change the text color to black */
     background-color: #fff; /* Change the background color to white */
 }
+    #reader__dashboard_section {
+        font-size: 20px; /* Increase the font size */
+    }
 
+    .html5-qrcode-element {
+        font-size: 20px; /* Increase the font size of buttons and input elements */
+        padding: 15px 30px; /* Increase the padding of buttons to make them larger */
+    }
     </style>
     <script type="text/javascript" src="https://unpkg.com/html5-qrcode"></script>
 </head>
