--- a/index.html
+++ b/index.html
@@ -2,87 +2,7 @@
 <html>
 <head>
     <title>QR Code Input</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #fff;
-            font-family: 'Courier New', monospace;
-        }
-        .game-button {
-            display: block;
-            background-color: #44c767;
-            border-radius: 28px;
-            border: 1px solid #18ab29;
-            color: #ffffff;
-            padding: 10px 20px;
-            text-decoration: none;
-            text-shadow: 0px 1px 0px #2f6627;
-            font-size: 20px;
-            margin: 20px 2px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .game-button:hover {
-            background-color: #5cbf2a;
-        }
-        .game-button:active {
-            position: relative;
-            top: 1px;
-        }
-        .info-window {
-            background-color: #333;
-            border-radius: 15px;
-            padding: 20px;
-            margin-top: 20px;
-        }
-        #preview {
-            position: relative;
-        }
-        #target {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 200px;
-            height: 200px;
-            margin-left: -100px;
-            margin-top: -100px;
-            border: 2px solid #44c767;
-            display: none; /* Make the target invisible initially */
-        }
-        #flash {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #ffffff;
-            opacity: 0;
-            transition: opacity 0.2s ease;
-        }
-        .game-button {
-    font-size: 30px; /* Increase the font size */
-    padding: 20px 40px; /* Increase the padding */
-    /* Other styles... */
-}
-
-.info-window {
-    font-size: 25px; /* Increase the font size */
-    /* Other styles... */
-}
-#reader__dashboard_section {
-    font-size: 20px; /* Increase the font size */
-    color: #000; /* Change the text color to black */
-    background-color: #fff; /* Change the background color to white */
-}
-    #reader__dashboard_section {
-        font-size: 20px; /* Increase the font size */
-    }
-
-    .html5-qrcode-element {
-        font-size: 20px; /* Increase the font size of buttons and input elements */
-        padding: 15px 30px; /* Increase the padding of buttons to make them larger */
-    }
-    </style>
+    <!-- Your styles here -->
     <script type="text/javascript" src="https://unpkg.com/html5-qrcode"></script>
 </head>
 <body>
@@ -94,6 +14,7 @@
     <div class="info-window" id="info-window">
         <!-- Information will be displayed here -->
     </div>
+    <div id="error-message" style="color: red;"></div> <!-- Add this line -->
 
     <script>
         let beep;
@@ -106,17 +27,18 @@
         let currentCameraIndex = 0;
         let cameras = [];
 
-       const onScanSuccess = (decodedText, decodedResult) => {
-    if (Date.now() - lastScannedTime > 100) { 
-        document.querySelector('#info-window').innerHTML = 'Scanned QR Code: <br>' + decodedText;
-        lastScannedTime = Date.now();
-        beep.play(); // Play the beep sound on successful scan
-    }
-}
-
+        const onScanSuccess = (decodedText, decodedResult) => {
+            if (Date.now() - lastScannedTime > 100) { 
+                document.querySelector('#info-window').innerHTML = 'Scanned QR Code: <br>' + decodedText;
+                lastScannedTime = Date.now();
+                beep.play().catch(error => { // Add error handling here
+                    document.querySelector('#error-message').innerHTML = "Error playing sound: " + error;
+                });
+            }
+        }
 
         const html5QrcodeScanner = new Html5QrcodeScanner(
-            "reader", { fps: 10, qrbox: 400 });
+            "reader", { fps: 10, qrbox: 200 });
 
         document.querySelector('#scan-button').addEventListener('click', function() {
             html5QrcodeScanner.render(onScanSuccess);
